// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIRenderer prefills interactive inputs with existing state 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="bar"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer re-renders when the interface changes 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value=""
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input2"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={2}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer re-syncs state when the interface changes 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="bar"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input2"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="foo"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={2}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders basic UI 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        fontWeight="normal"
        style={
          {
            "color": "inherit",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        textAlign="left"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "inherit",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Hello world!
        </Text>
      </Text>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders complex nested components 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        backgroundColor="#f2f4f6"
        borderRadius={8}
        color="Default"
        flexDirection="column"
        gap={8}
        justifyContent="flex-start"
        padding={16}
        style={
          [
            {
              "backgroundColor": "#f2f4f6",
              "color": "Default",
              "flexDirection": "column",
              "gap": 8,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "paddingBottom": 8,
              "paddingHorizontal": 8,
            }
          }
          testID="info-row"
        >
          <View
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "display": "flex",
                "flexDirection": "row",
                "minHeight": 38,
                "paddingEnd": 4,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "alignItems": "center",
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Bold",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "justifyContent": "center",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Key
            </Text>
          </View>
          <View
            style={
              {
                "marginLeft": "auto",
              }
            }
          >
            <View
              alignItems="center"
              flexDirection="row"
              gap={4}
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 4,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#9fa6ae",
                    "fontFamily": "EuclidCircularB-Regular",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Extra
              </Text>
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#141618",
                    "fontFamily": "EuclidCircularB-Regular",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                Value
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      flexDirection="row"
      gap={4}
      padding={4}
      style={
        {
          "bottom": 0,
          "justifyContent": "space-evenly",
          "paddingVertical": 20,
          "position": "absolute",
          "width": "100%",
        }
      }
      width="100%"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "#0376c9",
            "borderRadius": 24,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        textVariant="sBodyMDMedium"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 50,
                "borderWidth": 0,
                "height": 24,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 24,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              m
            </Text>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "inherit",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Foo
            </Text>
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders footers 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        fontWeight="normal"
        style={
          {
            "color": "inherit",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        textAlign="left"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "inherit",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Hello world!
        </Text>
      </Text>
    </View>
    <View
      flexDirection="row"
      gap={4}
      padding={4}
      style={
        {
          "bottom": 0,
          "justifyContent": "space-evenly",
          "paddingVertical": 20,
          "position": "absolute",
          "width": "100%",
        }
      }
      width="100%"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "#0376c9",
            "borderRadius": 24,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        textVariant="sBodyMDMedium"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 50,
                "borderWidth": 0,
                "height": 24,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 24,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              m
            </Text>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "inherit",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Foo
            </Text>
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer renders loading state 1`] = `
<ActivityIndicator
  color="#1292B4"
  size="large"
/>
`;

exports[`SnapUIRenderer supports forms with fields 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        flexDirection="column"
        gap={8}
        style={
          [
            {
              "flexDirection": "column",
              "gap": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
          testID="label"
        >
          My Input
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#848c96",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 48,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
          testID="textfield"
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <TextInput
              autoFocus={false}
              editable={true}
              id="input"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#141618",
                  "fontFamily": "Euclid Circular B",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "height": 24,
                  "letterSpacing": 0,
                  "opacity": 1,
                  "paddingVertical": 0,
                }
              }
              testID="input"
              value="abc"
            />
          </View>
        </View>
        <View
          flexDirection="column"
          style={
            [
              {
                "flexDirection": "column",
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#141618",
                "fontFamily": "EuclidCircularB-Regular",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
            testID="label"
          >
            My Checkbox
          </Text>
          <TouchableOpacity
            disabled={false}
            onPress={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 24,
                "opacity": 1,
              }
            }
          >
            <View
              accessibilityRole="checkbox"
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#0376c9",
                  "borderColor": "border-muted",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "height": 20,
                  "justifyContent": "center",
                  "width": 20,
                }
              }
            >
              <SvgMock
                color="#ffffff"
                height={20}
                name="CheckBold"
                onPress={[Function]}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                testID="checkbox-icon-component"
                width={20}
              />
            </View>
            <View
              style={
                {
                  "marginLeft": 12,
                }
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#141618",
                    "fontFamily": "EuclidCircularB-Regular",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 22,
                  }
                }
              >
                This is a checkbox
              </Text>
            </View>
          </TouchableOpacity>
        </View>
        <Text
          accessibilityRole="link"
          accessible={true}
          disabled={false}
          id="submit"
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "backgroundColor": "transparent",
              "color": "#0376c9",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
          suppressHighlighting={true}
          textVariant="sBodyMDMedium"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "inherit",
                "fontFamily": "EuclidCircularB-Regular",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Submit
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer supports interactive inputs 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderColor": "#848c96",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "opacity": 1,
            "paddingHorizontal": 16,
          }
        }
        testID="textfield"
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <TextInput
            autoFocus={false}
            editable={true}
            id="input"
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "transparent",
                "borderWidth": 1,
                "color": "#141618",
                "fontFamily": "Euclid Circular B",
                "fontSize": 14,
                "fontWeight": "400",
                "height": 24,
                "letterSpacing": 0,
                "opacity": 1,
                "paddingVertical": 0,
              }
            }
            testID="input"
            value="a"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;

exports[`SnapUIRenderer supports the onCancel prop 1`] = `
<View
  style={
    {
      "flexGrow": 1,
      "minHeight": 667,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      color="Default"
      flexDirection="column"
      justifyContent="flex-start"
      style={
        [
          {
            "color": "Default",
            "flexDirection": "column",
            "justifyContent": "flex-start",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        fontWeight="normal"
        style={
          {
            "color": "inherit",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        textAlign="left"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "inherit",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Hello world!
        </Text>
      </Text>
    </View>
    <View
      flexDirection="row"
      gap={4}
      padding={4}
      style={
        {
          "bottom": 0,
          "justifyContent": "space-evenly",
          "paddingVertical": 20,
          "position": "absolute",
          "width": "100%",
        }
      }
      width="100%"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "transparent",
            "borderColor": "#0376c9",
            "borderRadius": 24,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        disabled={false}
        loading={false}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        textVariant="sBodyMDMedium"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 50,
                "borderWidth": 0,
                "height": 24,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 24,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              m
            </Text>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "inherit",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Foo
            </Text>
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View
    data-renders={1}
    testID="performance"
  />
</View>
`;
